--- a/devel/hs-repline/Makefile
+++ b/devel/hs-repline/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:32:09 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/01 12:49:52 pho Exp $
 
 DISTNAME=	repline-0.4.2.0
 PKGREVISION=	4
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Haskeline wrapper for GHCi-like REPL interfaces
 LICENSE=	mit
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	containers
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
