--- a/textproc/hs-cheapskate/Makefile
+++ b/textproc/hs-cheapskate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2024/05/09 01:32:40 pho Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/01 12:59:27 pho Exp $
 
 DISTNAME=	cheapskate-0.1.1.2
 PKGREVISION=	8
@@ -12,6 +12,8 @@ LICENSE=	modified-bsd
 CONFIGURE_ARGS+=	-f-dingus
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	containers	\
+	data-default	\
 	mtl	\
 	text
 
