--- a/net/hs-resolv/Makefile
+++ b/net/hs-resolv/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2024/05/09 01:32:31 pho Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/01 13:50:41 pho Exp $
 
 DISTNAME=	resolv-0.2.0.2
 PKGREVISION=	2
@@ -9,7 +9,8 @@ COMMENT=	Domain Name Service (DNS) lookup
 LICENSE=	gnu-gpl-v2
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	bytestring
+	bytestring	\
+	containers
 
 .include "../../converters/hs-base16-bytestring/buildlink3.mk"
 .include "../../mk/haskell.mk"
