--- a/textproc/hs-regex-posix/Makefile
+++ b/textproc/hs-regex-posix/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:32:45 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/02/01 13:57:35 pho Exp $
 
 DISTNAME=	regex-posix-0.96.0.1
 PKGREVISION=	6
@@ -10,7 +10,8 @@ LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
 	base	\
-	bytestring
+	bytestring	\
+	containers
 
 .include "../../mk/haskell.mk"
 .include "../../textproc/hs-regex-base/buildlink3.mk"
