--- a/www/hs-warp-tls/Makefile
+++ b/www/hs-warp-tls/Makefile
@@ -1,21 +1,18 @@
-# $NetBSD: Makefile,v 1.15 2024/05/09 01:32:56 pho Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/01 14:35:13 pho Exp $
 
-DISTNAME=	warp-tls-3.4.5
-PKGREVISION=	1
+DISTNAME=	warp-tls-3.4.12
 CATEGORIES=	www security
 
-MAINTAINER=	pho@cielonegro.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	HTTP over TLS support for Warp via the TLS package
 LICENSE=	mit
 
-.include "../../devel/hs-data-default-class/buildlink3.mk"
-.include "../../net/hs-network/buildlink3.mk"
-.include "../../net/hs-recv/buildlink3.mk"
-.include "../../devel/hs-streaming-commons/buildlink3.mk"
-.include "../../security/hs-tls/buildlink3.mk"
-.include "../../security/hs-tls-session-manager/buildlink3.mk"
-.include "../../devel/hs-unliftio/buildlink3.mk"
 .include "../../www/hs-wai/buildlink3.mk"
 .include "../../www/hs-warp/buildlink3.mk"
+.include "../../security/hs-tls/buildlink3.mk"
+.include "../../net/hs-network/buildlink3.mk"
+.include "../../devel/hs-streaming-commons/buildlink3.mk"
+.include "../../security/hs-tls-session-manager/buildlink3.mk"
+.include "../../net/hs-recv/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
