--- a/devel/py-test-plus/Makefile
+++ b/devel/py-test-plus/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2025/01/29 09:25:12 adam Exp $
+# $NetBSD: Makefile,v 1.2 2025/02/01 18:37:04 adam Exp $
 
-DISTNAME=	pytest-plus-0.7.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//:S/_/-/}
+DISTNAME=	pytest_plus-0.8.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pytest_/test-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-plus/}
 
@@ -10,7 +10,8 @@ HOMEPAGE=	https://github.com/pytest-dev/pytest-plus
 COMMENT=	Extends pytest functionality
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=63.0.0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=7.0.5:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-test>=7.4.2:../../devel/py-test
 TEST_DEPENDS+=	${PYPKGPREFIX}-coverage>=7.0.0:../../devel/py-coverage
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-html>0:../../devel/py-test-html
