--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4411 2025/02/01 08:36:36 wiz Exp $
+# $NetBSD: Makefile,v 1.4412 2025/02/01 19:19:26 schmonz Exp $
 #
 
 COMMENT=	Development utilities
@@ -262,6 +262,7 @@ SUBDIR+=	cobol-mode
 SUBDIR+=	coccinelle
 SUBDIR+=	cocogitto
 SUBDIR+=	coconut
+SUBDIR+=	codeberg-cli
 SUBDIR+=	cogito
 SUBDIR+=	colordiff
 SUBDIR+=	commit-patch
