--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1838 2025/02/02 04:01:55 pho Exp $
+# $NetBSD: Makefile,v 1.1839 2025/02/02 04:04:36 pho Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -174,6 +174,7 @@ SUBDIR+=	hs-js-jquery
 SUBDIR+=	hs-open-browser
 SUBDIR+=	hs-path-pieces
 SUBDIR+=	hs-servant
+SUBDIR+=	hs-servant-client
 SUBDIR+=	hs-servant-client-core
 SUBDIR+=	hs-servant-server
 SUBDIR+=	hs-wai
