--- a/x11/hs-X11/Makefile
+++ b/x11/hs-X11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2024/05/09 01:32:57 pho Exp $
+# $NetBSD: Makefile,v 1.19 2025/02/02 05:53:26 pho Exp $
 
 DISTNAME=	X11-1.10.3
 PKGREVISION=	4
@@ -8,11 +8,14 @@ MAINTAINER=	esg@sdf.lonestar.org
 COMMENT=	Haskell binding to the X11 graphics library
 LICENSE=	modified-bsd
 
-.include "../../mk/haskell.mk"
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	data-default-class
+
 .include "../../devel/hs-data-default-class/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
 .include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXScrnSaver/buildlink3.mk"
 .include "../../x11/libXinerama/buildlink3.mk"
+.include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
