--- a/net/p5-Net-DNS/Makefile
+++ b/net/p5-Net-DNS/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.112 2024/12/29 16:15:06 wiz Exp $
+# $NetBSD: Makefile,v 1.113 2025/02/02 11:33:56 he Exp $
 
 DISTNAME=		Net-DNS-1.49
 PKGNAME=		p5-${DISTNAME}
+PKGREVISION=		1
 CATEGORIES=		net perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Net/}
 MASTER_SITES+=		http://www.net-dns.org/download/
