--- a/mail/php-vmailmgr/Makefile
+++ b/mail/php-vmailmgr/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1 2024/02/25 12:09:20 schmonz Exp $
+# $NetBSD: Makefile,v 1.2 2025/02/02 11:37:30 wiz Exp $
 
 .include "../../mail/vmailmgr/Makefile.common"
 
-PKGNAME=		php-vmailmgr-${VERSION}
+PKGNAME=		${PHP_PKG_PREFIX}-vmailmgr-${VERSION}
 CATEGORIES=		mail
 
 MAINTAINER=		schmonz@NetBSD.org
@@ -16,6 +16,8 @@ CONFIGURE_ARGS+=	--enable-php
 
 BUILD_DIRS=		php
 INSTALL_DIRS=		php
+
+CONFLICTS+=		php-vmailmgr-[0-9]*
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/${INSTALL_DIRS}/vmail.features \
