--- a/cad/openscad/Makefile
+++ b/cad/openscad/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.114 2025/01/14 13:22:36 wiz Exp $
+# $NetBSD: Makefile,v 1.115 2025/02/02 13:28:53 mef Exp $
 
 VERSION=	2021.01
 DISTNAME=	openscad-${VERSION}
-PKGREVISION=	35
+PKGREVISION=	36
 CATEGORIES=	cad
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openscad/}
 GITHUB_TAG=	openscad-${VERSION}
